--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -728,3 +728,18 @@ skill_shenguangliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_00
 skill_shenguangyuandan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_001.mp3'
 skill_guangsuliechong: 'https://seer2-resource.yuuinih.com/sound/skill/12_1_002.mp3'
 skill_guangsufeidan: 'https://seer2-resource.yuuinih.com/sound/skill/12_2_003.mp3'
+# 琳娜/卡特琳娜技能音效
+skill_hanshuangchuanliu: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
+skill_bingdiangongji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_001.mp3'
+skill_xishuichangliu: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_hanqibaifa: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_001.mp3'
+skill_hanshuangyuyi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
+skill_jidongsexian: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_zhihanyiji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
+skill_luoshuang: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
+skill_hanshuangtiandi: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_001.mp3'
+skill_shuanghounhunqu: 'https://seer2-resource.yuuinih.com/sound/skill/11367.mp3'
+skill_hanshuangpingzhang: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_qiannianbingbi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
+skill_tuanliubuxi: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_001.mp3'
+skill_shuanghunxuanlv: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
