--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -279,3 +279,8 @@
   effect:
     - effect_ability_shenguang_immune_status_above_half_hp
     - effect_ability_shenguang_sure_hit_below_half_hp
+- id: mark_ability_gugao
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_gugao_prevent_rage_when_opponent_use_skill
