--- a/data/species.yaml
+++ b/data/species.yaml
@@ -6507,3 +6507,108 @@
     - mark_ability_shenguang
   emblem:
     - mark_emblem_guangwu
+- id: pet_linna
+  num: 224
+  element: Ice
+  baseStats:
+    hp: 89
+    atk: 125 # 75 + 50
+    spa: 134 # 84 + 50
+    def: 116 # 66 + 50
+    spd: 118 # 68 + 50
+    spe: 112 # 62 + 50
+  genderRatio: [5, 5]
+  heightRange: [18, 23]
+  weightRange: [12, 17]
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_shuiqiang
+      level: 5
+      hidden: false
+    - skill_id: skill_ningju
+      level: 10
+      hidden: false
+    - skill_id: skill_hanshuangchuanliu
+      level: 15
+      hidden: false
+    - skill_id: skill_bingdiangongji
+      level: 21
+      hidden: false
+    - skill_id: skill_xishuichangliu
+      level: 25
+      hidden: false
+  ability:
+    - mark_ability_gugao
+  emblem:
+    - mark_emblem_anhun
+- id: pet_katelinna
+  num: 225
+  element: Ice
+  baseStats:
+    hp: 179
+    atk: 170 # 120 + 50
+    spa: 184 # 134 + 50
+    def: 161 # 111 + 50
+    spd: 163 # 113 + 50
+    spe: 162 # 112 + 50
+  genderRatio: [5, 5]
+  heightRange: [92, 97]
+  weightRange: [45, 50]
+  learnable_skills:
+    - skill_id: skill_zhuangji
+      level: 1
+      hidden: false
+    - skill_id: skill_shuiqiang
+      level: 5
+      hidden: false
+    - skill_id: skill_ningju
+      level: 10
+      hidden: false
+    - skill_id: skill_hanshuangchuanliu
+      level: 15
+      hidden: false
+    - skill_id: skill_bingdiangongji
+      level: 21
+      hidden: false
+    - skill_id: skill_xishuichangliu
+      level: 25
+      hidden: false
+    - skill_id: skill_hanqibaifa
+      level: 30
+      hidden: false
+    - skill_id: skill_hanshuangyuyi
+      level: 35
+      hidden: false
+    - skill_id: skill_jidongsexian
+      level: 40
+      hidden: false
+    - skill_id: skill_zhihanyiji
+      level: 45
+      hidden: false
+    - skill_id: skill_luoshuang
+      level: 50
+      hidden: false
+    - skill_id: skill_hanshuangtiandi
+      level: 55
+      hidden: false
+    - skill_id: skill_shuanghounhunqu
+      level: 60
+      hidden: true
+    - skill_id: skill_hanshuangpingzhang
+      level: 60
+      hidden: true
+    - skill_id: skill_qiannianbingbi
+      level: 60
+      hidden: true
+    - skill_id: skill_tuanliubuxi
+      level: 60
+      hidden: true
+    - skill_id: skill_shuanghunxuanlv
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_gugao
+  emblem:
+    - mark_emblem_anhun
