--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -178,19 +178,19 @@ mark_shuangpozhuiji: 'https://seer2-resource.yuuinih.com/png/markImage/3158.png'
 mark_xulichongji: 'https://seer2-resource.yuuinih.com/png/markImage/3161.png'
 mark_fenshen: 'https://seer2-resource.yuuinih.com/png/markImage/3184.png'
 mark_fenshenhying: 'https://seer2-resource.yuuinih.com/png/markImage/3185.png'
-mark_huafenmiman: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3200.png'
-mark_longlinjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4013.png'
-mark_jieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3260.png'
-mark_dadizhiyou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3261.png'
-mark_shabaozhili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3262.png'
-mark_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3254.png'
-mark_heianwuzhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3167.png'
-mark_yingfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3168.png'
-mark_buxieanguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4021.png'
-mark_shandianshoushu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4012.png'
-mark_shandianluoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3145.png'
-mark_xudian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3144.png'
-mark_jingshencuoluan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3112.png'
+mark_huafenmiman: 'https://seer2-resource.yuuinih.com/png/markImage/3200.png'
+mark_longlinjia: 'https://seer2-resource.yuuinih.com/png/markImage/4013.png'
+mark_jieli: 'https://seer2-resource.yuuinih.com/png/markImage/3260.png'
+mark_dadizhiyou: 'https://seer2-resource.yuuinih.com/png/markImage/3261.png'
+mark_shabaozhili: 'https://seer2-resource.yuuinih.com/png/markImage/3262.png'
+mark_taitanzhihu: 'https://seer2-resource.yuuinih.com/png/markImage/3254.png'
+mark_heianwuzhi: 'https://seer2-resource.yuuinih.com/png/markImage/3167.png'
+mark_yingfeng: 'https://seer2-resource.yuuinih.com/png/markImage/3168.png'
+mark_buxieanguang: 'https://seer2-resource.yuuinih.com/png/markImage/4021.png'
+mark_shandianshoushu: 'https://seer2-resource.yuuinih.com/png/markImage/4012.png'
+mark_shandianluoyin: 'https://seer2-resource.yuuinih.com/png/markImage/3145.png'
+mark_xudian: 'https://seer2-resource.yuuinih.com/png/markImage/3144.png'
+mark_jingshencuoluan: 'https://seer2-resource.yuuinih.com/png/markImage/3112.png'
 mark_huanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3124.png'
 mark_zhenshihuanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3125.png'
 mark_wanan: 'https://seer2-resource.yuuinih.com/png/markImage/3127.png'
@@ -216,3 +216,8 @@ mark_guangwushentong: 'https://seer2-resource.yuuinih.com/png/markImage/3205.png
 mark_guangwulingtong: 'https://seer2-resource.yuuinih.com/png/markImage/3206.png'
 mark_lingtongchuanda: 'https://seer2-resource.yuuinih.com/png/markImage/3207.png'
 mark_guanghudun: 'https://seer2-resource.yuuinih.com/png/markImage/4016.png'
+mark_hanshuangpingzhang: 'https://seer2-resource.yuuinih.com/png/markImage/3268.png'
+mark_yihuopingzhang: 'https://seer2-resource.yuuinih.com/png/markImage/3269.png'
+mark_lache: 'https://seer2-resource.yuuinih.com/png/markImage/3270.png'
+mark_anhunqu: 'https://seer2-resource.yuuinih.com/png/markImage/3271.png'
+mark_shuanghunxuanlv: 'https://seer2-resource.yuuinih.com/png/markImage/3272.png'
