fix: Add petIsActive condition to effect ability
Introduced a new 'petIsActive' condition to the specified effect ability, ensuring the effect only triggers when the pet is active. This refines the activation logic for more accurate behavior.

--- a/data/effect_ability.yaml
+++ b/data/effect_ability.yaml
@@ -1305,6 +1305,7 @@
     type: every
     conditions:
       - type: opponentUseSkill
+      - type: petIsActive
       - type: evaluate
         target:
           base: rageContext
