--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -51,6 +51,7 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/slim": "^3.8.1",
     "@tsparticles/vue3": "^3.0.1",
+    "@types/ua-parser-js": "^0.7.39",
     "@vueuse/core": "^13.6.0",
     "@vueuse/sound": "^2.1.3",
     "axios": "^1.11.0",
@@ -73,6 +74,7 @@
     "sortablejs-vue3": "^1.2.11",
     "tailwindcss": "^4.1.11",
     "tsparticles": "^3.8.1",
+    "ua-parser-js": "^2.0.4",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "yaml": "^2.8.0",
